--- a/spelsak.css
+++ b/spelsak.css
@@ -1,10 +1,9 @@
 /* Resetting default margins and paddings */
-* {
+* {/*max*/
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-
 /* Setting up some basic styles */
 body {
     font-family: Arial, sans-serif;
@@ -12,15 +11,14 @@ body {
     padding: 0;
     margin: 0;
 }
-
 main {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-
+/*luis*/
 .player {
-    background-color: #fff;
+    background-color: #e3e3e5;
     border: 2px solid #ccc;
     border-radius: 5px;
     padding: 20px;
@@ -28,24 +26,24 @@ main {
     text-align: center;
     width: 200px;
 }
-
+/*luis*/
 .player_active {
-    border-color: #df3f3f;
-    border-width: 0.8vh;
+    border-color: #322A26;
+    border-width: 0.7vh;
     /* färg på aktiva spelaren */
 }
-
+/*luis*/
 .name {
     font-size: 1.2em;
     margin-bottom: 10px;
 }
-
+/*max*/
 .score {
     font-size: 1.5em;
     color: #007bff;
     margin-bottom: 10px;
 }
-
+/*här skrev luis*/
 .current {
     margin-top: 10px;
 }
@@ -61,24 +59,26 @@ main {
 
 .dice {
     max-width: 100px;
-    margin-top: -10px;
+    margin-top: -15px;
+    margin-bottom: 1px;
 }
-
+/*här och neråt är max*/
 button {
     border: none;
     display: block;
     position: relative;
     padding: 0.7em 2.4em;
     font-size: 18px;
-    background: transparent;
+    background: #e3e3e5;
     cursor: pointer;
     user-select: none;
     overflow: hidden;
-    color: royalblue;
+    color: #2b2a2a;
     z-index: 1;
     font-family: inherit;
     font-weight: 500;
     margin: 4px;
+    border-radius: 0.75vh;
 }
 
 button span {
@@ -89,7 +89,7 @@ button span {
     height: 100%;
     background: transparent;
     z-index: -1;
-    border: 4px solid royalblue;
+    border: 0.65vh solid #322A26;
 }
 
 button span::before {
@@ -108,7 +108,7 @@ button span::before {
 button:hover span::before {
     transform: translate(-50%, -50%) rotate(-90deg);
     width: 100%;
-    background: royalblue;
+    background: #454B66;
 }
 
 button:hover {
